{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 223,
  "lineage": "a9df35ce-647b-1cfc-cfd0-b963e945f099",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b14bf54c9cef7492",
            "arn": "arn:aws:ec2:us-east-1:565284591142:instance/i-08a81be371c797d13",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08a81be371c797d13",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01421c35a01f84022",
            "private_dns": "ip-10-0-101-233.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.233",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05c780f7a3c1ab367",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02bdf6d3fd0320438",
            "tags": {
              "Environment": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b2d3d8e045359d44"
            ]
          },
          "dependencies": [
            "module.ec2.data.aws_ami.ubuntu",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565284591142:network-acl/acl-03a71dd65965f57dc",
            "default_network_acl_id": "acl-03a71dd65965f57dc",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-03a71dd65965f57dc",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "565284591142",
            "subnet_ids": [
              "subnet-0156d838584608085",
              "subnet-021608d13fb339a35",
              "subnet-02bdf6d3fd0320438",
              "subnet-093bacf6f8b059cf4"
            ],
            "tags": {
              "Environment": "GiddyBellovpc",
              "Name": "GiddyBellovpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "GiddyBellovpc",
              "Name": "GiddyBellovpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0710e8ac5317a2489"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565284591142:route-table/rtb-0b91784fc65206bb0",
            "default_route_table_id": "rtb-0b91784fc65206bb0",
            "id": "rtb-0b91784fc65206bb0",
            "owner_id": "565284591142",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "GiddyBellovpc",
              "Name": "GiddyBellovpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "GiddyBellovpc",
              "Name": "GiddyBellovpc-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0710e8ac5317a2489"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565284591142:security-group/sg-0b2d3d8e045359d44",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0b2d3d8e045359d44",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "565284591142",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "GiddyBellovpc",
              "Name": "GiddyBellovpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "GiddyBellovpc",
              "Name": "GiddyBellovpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0710e8ac5317a2489"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03131c0a4a5980d21",
            "domain": "vpc",
            "id": "eipalloc-03131c0a4a5980d21",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-239-236-96.compute-1.amazonaws.com",
            "public_ip": "34.239.236.96",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "GiddyBellovpc",
              "Name": "GiddyBellovpc-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "GiddyBellovpc",
              "Name": "GiddyBellovpc-us-east-1a",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00adbe14817da7418",
            "domain": "vpc",
            "id": "eipalloc-00adbe14817da7418",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-239-86-166.compute-1.amazonaws.com",
            "public_ip": "34.239.86.166",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "GiddyBellovpc",
              "Name": "GiddyBellovpc-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "GiddyBellovpc",
              "Name": "GiddyBellovpc-us-east-1b",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565284591142:internet-gateway/igw-014958cf693cb0388",
            "id": "igw-014958cf693cb0388",
            "owner_id": "565284591142",
            "tags": {
              "Environment": "GiddyBellovpc",
              "Name": "GiddyBellovpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "GiddyBellovpc",
              "Name": "GiddyBellovpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0710e8ac5317a2489"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03131c0a4a5980d21",
            "association_id": "eipassoc-078da25b378902b56",
            "connectivity_type": "public",
            "id": "nat-06cb1d95e751d2dc7",
            "network_interface_id": "eni-0c20401f81164a2f0",
            "private_ip": "10.0.101.99",
            "public_ip": "34.239.236.96",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02bdf6d3fd0320438",
            "tags": {
              "Environment": "GiddyBellovpc",
              "Name": "GiddyBellovpc-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "GiddyBellovpc",
              "Name": "GiddyBellovpc-us-east-1a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00adbe14817da7418",
            "association_id": "eipassoc-0a2af33a29cd43220",
            "connectivity_type": "public",
            "id": "nat-022b6c71b1b2f8d1c",
            "network_interface_id": "eni-079487ac042e0e08a",
            "private_ip": "10.0.102.157",
            "public_ip": "34.239.86.166",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-093bacf6f8b059cf4",
            "tags": {
              "Environment": "GiddyBellovpc",
              "Name": "GiddyBellovpc-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "GiddyBellovpc",
              "Name": "GiddyBellovpc-us-east-1b",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fd870e40b1625b371080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06cb1d95e751d2dc7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fd870e40b1625b37",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06b2069c7390f3fe51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-022b6c71b1b2f8d1c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06b2069c7390f3fe5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-014958cf693cb0388",
            "id": "r-rtb-099653095ad766ecd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-099653095ad766ecd",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565284591142:route-table/rtb-0fd870e40b1625b37",
            "id": "rtb-0fd870e40b1625b37",
            "owner_id": "565284591142",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "GiddyBellovpc",
              "Name": "GiddyBellovpc-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "GiddyBellovpc",
              "Name": "GiddyBellovpc-private-us-east-1a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0710e8ac5317a2489"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565284591142:route-table/rtb-06b2069c7390f3fe5",
            "id": "rtb-06b2069c7390f3fe5",
            "owner_id": "565284591142",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "GiddyBellovpc",
              "Name": "GiddyBellovpc-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "GiddyBellovpc",
              "Name": "GiddyBellovpc-private-us-east-1b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0710e8ac5317a2489"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565284591142:route-table/rtb-099653095ad766ecd",
            "id": "rtb-099653095ad766ecd",
            "owner_id": "565284591142",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "GiddyBellovpc",
              "Name": "GiddyBellovpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "GiddyBellovpc",
              "Name": "GiddyBellovpc-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0710e8ac5317a2489"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bba89610bb514fe2",
            "route_table_id": "rtb-0fd870e40b1625b37",
            "subnet_id": "subnet-0156d838584608085"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087dff1dd7f201454",
            "route_table_id": "rtb-06b2069c7390f3fe5",
            "subnet_id": "subnet-021608d13fb339a35"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a16dfbd7c04f8955",
            "route_table_id": "rtb-099653095ad766ecd",
            "subnet_id": "subnet-02bdf6d3fd0320438"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e69bc8375f59fc85",
            "route_table_id": "rtb-099653095ad766ecd",
            "subnet_id": "subnet-093bacf6f8b059cf4"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565284591142:subnet/subnet-0156d838584608085",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0156d838584608085",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "565284591142",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "GiddyBellovpc",
              "Name": "GiddyBellovpc-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "GiddyBellovpc",
              "Name": "GiddyBellovpc-private-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0710e8ac5317a2489"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565284591142:subnet/subnet-021608d13fb339a35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-021608d13fb339a35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "565284591142",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "GiddyBellovpc",
              "Name": "GiddyBellovpc-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "GiddyBellovpc",
              "Name": "GiddyBellovpc-private-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0710e8ac5317a2489"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565284591142:subnet/subnet-02bdf6d3fd0320438",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02bdf6d3fd0320438",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "565284591142",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "GiddyBellovpc",
              "Name": "GiddyBellovpc-public-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "GiddyBellovpc",
              "Name": "GiddyBellovpc-public-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0710e8ac5317a2489"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565284591142:subnet/subnet-093bacf6f8b059cf4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-093bacf6f8b059cf4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "565284591142",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "GiddyBellovpc",
              "Name": "GiddyBellovpc-public-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "GiddyBellovpc",
              "Name": "GiddyBellovpc-public-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0710e8ac5317a2489"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565284591142:vpc/vpc-0710e8ac5317a2489",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03a71dd65965f57dc",
            "default_route_table_id": "rtb-0b91784fc65206bb0",
            "default_security_group_id": "sg-0b2d3d8e045359d44",
            "dhcp_options_id": "dopt-02fbd79e018b8ad4a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0710e8ac5317a2489",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b91784fc65206bb0",
            "owner_id": "565284591142",
            "tags": {
              "Environment": "GiddyBellovpc",
              "Name": "GiddyBellovpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "GiddyBellovpc",
              "Name": "GiddyBellovpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}